--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 body {
     font-size: 14px;
     font-family: arial,sans-serif;
+    font-weight: 500;
+    letter-spacing: .25px;
 }
 
 #first {
@@ -26,11 +28,12 @@ li {
 }
 
 li a {
-    display: block;
+    display: inline-block;
     color: black;
     text-align: center;
-
+    vertical-align: middle;
     text-decoration: none;
+    line-height: 16px;
 }
 li a:hover {
     text-decoration: underline;
@@ -71,12 +74,34 @@ li a:hover {
 
     }
 
+    #signIn {
+        display: inline-block;
+        padding: 9px 23px;
+        min-width: 96px;
+        background-color: #1a73e8;
+        color: white;
+        border: 1px solid transparent;
+        border-radius: 4px;
+        box-sizing: border-box;
+        
+    }
+
+    #signIn a {
+        color: white;
+    }
+
+    #signIn a:hover {
+        background-color: #2b7de9;;
+        text-decoration: none;
+
+    }
+
 </style>
 <body>
 <ul>
     <li id = "first"><a href = "https://about.google/a/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header"> About </a></li>
     <li><a href = "https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US"> Store </a></li>
-    <li class = "rightNav"><button color = "blue"> Sign in </button> </li>
+    <li id = "signIn" class = "rightNav"><a href = "https://accounts.google.com/signin/v2/identifier?hl=en&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&ec=GAZAmgQ&flowName=GlifWebSignIn&flowEntry=ServiceLogin"> Sign in </a> </li>
     <li class = "rightNav"><button> ... </button></li>
     <li class = "rightNav"><a href = "https://www.google.com/imghp?hl=en&ogbl"> Images </a></li>
     <li class = "rightNav"><a href = "https://www.google.com/gmail/about/"> Gmail </a></li>
