--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
             position: relative;
             margin: auto;
             padding: 20px;
-            
+            border-radius: 24px;
+        }
+
+        input {
+            width: 303px;
         }
 
         .searchButtons {
@@ -107,6 +111,11 @@
             background-color: rgba(60,64,67,0.08);
             border-radius: 50%;
         }
+
+        .searchIcon {
+            margin: auto;
+        }
+
 
 </style>
 <body>
@@ -153,8 +162,13 @@
 <main>
     <img class = "logo" src = "https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt = "the word google written with different colored letters">
     <div class = "searchBar">
+        <span class="searchIcon material-icons md-light">
+            search
+            </span>
         <input type = "text" name = "searchBar" placeholder="">
+
     </div> 
+        
     <div class = "searchButtons">
         <button> Google Search </button>
         <button> I'm Feeling Lucky </button>
