Matched google search icon color and size

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
         }
 
 
+        .material-icons.md-18 { font-size: 20px; }
+        .material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
+
 </style>
 <body>
 
@@ -162,7 +165,7 @@
 <main>
     <img class = "logo" src = "https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt = "the word google written with different colored letters">
     <div class = "searchBar">
-        <span class="searchIcon material-icons md-light">
+        <span class="searchIcon material-icons md-18 md-dark md-inactive">
             search
             </span>
         <input type = "text" name = "searchBar" placeholder="">
