--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     }
 
         main {
-            width: 584px;
             margin: 175px auto;
             border: 3px solid #000000;
             display: flex;
@@ -63,13 +62,22 @@
         .searchBar {
             display: flex;
             position: relative;
-            margin: auto;
-            padding: 20px;
+            width: 584px;
+            max-width: 584px;
+            height: 44px;
+            margin: 20px auto;
+            border: 1px solid #dfe1e5;
             border-radius: 24px;
         }
 
         input {
+            display: flex;
+            flex-grow: 1;
+            flex-shrink: 1;
+            flex-basis: 100%;
             width: 303px;
+            border: none;
+            background: transparent;
         }
 
         .searchButtons {
@@ -113,10 +121,9 @@
         }
 
         .searchIcon {
-            margin: auto;
+            position: relative;
+            margin: auto 15px;
         }
-
-
         .material-icons.md-18 { font-size: 20px; }
         .material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
 
