Formatted search buttons

--- a/index.html
+++ b/index.html
@@ -86,7 +86,28 @@
             flex-direction: row;
             align-items: space-evenly;
             justify-content: center;
+        }
 
+        .buttons {
+            height: 36px;
+            min-width: 54px;
+            cursor: pointer;
+            margin: 11px 4px;
+            border-radius: 4px;
+            padding: 0 16px;
+            color: #3c4043;
+            border: 1px solid #f8f9fa;
+            background-color: #f8f9fa;
+            box-shadow: 0 1px 1px rgba(0,0,0,.1);
+            font-size: 14px;
+            
+        }
+
+        .buttons:hover {
+            box-shadow: 0 1px 1px rgba(0,0,0,.1);
+            background-color: #f8f9fa;
+            border: 1px solid #dadce0;
+            color: #202124;
         }
 
         #signIn {
@@ -180,8 +201,8 @@
     </div> 
         
     <div class = "searchButtons">
-        <button> Google Search </button>
-        <button> I'm Feeling Lucky </button>
+        <button class = "buttons"> Google Search </button>
+        <button class = "buttons"> I'm Feeling Lucky </button>
     </div>
 </main>
 
