--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
     }
 
         main {
-            margin: 175px auto;
-            border: 3px solid #000000;
+            margin:175px auto;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: space-evenly;
         }
+
+
 
         .logo {
             display: block;
@@ -70,15 +71,25 @@
             border-radius: 24px;
         }
 
+        .searchBar:hover {
+            box-shadow: 0 1px 6px rgba(32,33,36,.28);
+            border-color: rgba(223,225,229,0);
+            background-color: #fff;
+        }
+
+
         input {
             display: flex;
+            color: rgba(0,0,0,.87);
+            border: none;
             flex-grow: 1;
             flex-shrink: 1;
             flex-basis: 100%;
             width: 303px;
-            border: none;
             background: transparent;
+            outline: transparent;
         }
+
 
         .searchButtons {
             position: relative;
@@ -130,8 +141,6 @@
 
         }
 
-        #productsDropdown {
-        }
 
         #productsDropdown a:hover {
             text-decoration: none;
