Added Bottom Navbar links

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         float: right;
     }
 
+    .bottomNav {
+        border: 1px solid black;
+    }
+
+
         main {
             margin:175px auto;
             display: flex;
@@ -164,7 +169,7 @@
     rel="stylesheet">
 
 
-<ul>
+<ul class = topNav>
     <li class = "textLink" id = "first">
         <a href = "https://about.google/a/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">
              About 
@@ -213,6 +218,45 @@
         <button class = "buttons"> Google Search </button>
         <button class = "buttons"> I'm Feeling Lucky </button>
     </div>
+
+    <ul class = bottomNav>
+        <li class = "textLink bottomNav">
+            <a href = "https://sustainability.google/commitments/?utm_source=googlehpfooter&utm_medium=housepromos&utm_campaign=bottom-footer&utm_content=">
+                 Carbon neutral since 2007 
+            </a>
+        </li>
+        <li class = "textLink bottomNav">
+            <a href = "https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1#!/">
+                 Advertising 
+            </a>
+        </li>
+        <li class = "textLink bottomNav">
+            <a href = "https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">
+                 Business 
+            </a>
+        </li>
+        <li class = "textLink bottomNav">
+            <a href = "https://www.google.com/search/howsearchworks/?fg=1">
+                 How Search Works 
+            </a>
+        </li>
+        <li class = "textLink bottomNav rightNav">
+            <a href = "https://policies.google.com/privacy?hl=en&fg=1">
+                 Privacy 
+            </a>
+        </li>
+        <li class = "textLink bottomNav rightNav">
+            <a href = "https://policies.google.com/terms?hl=en&fg=1">
+                 Terms 
+            </a>
+        </li>
+        <li class = "textLink bottomNav rightNav">
+            <a href = "">
+                 Settings 
+            </a>
+        </li>
+    </ul>
+
 </main>
 
 </body>
